# arabic_lecture_cleaner

./: .gitignore  README.md  main.py  pyproject.toml
arabic_lecture_cleaner/: cleaner.py  constants.py  llm_cleaning.py  pdf_extraction.py
