[project]
name = "arabic-lecture-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "ollama>=0.5.3",
    "pdfplumber>=0.11.7",
    "requests>=2.32.4",
    "ruff>=0.12.8",
]
